--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/png" href="https://img.icons8.com/fluent/96/000000/dog.png" sizes="any" />
   <meta property="og:title" content="Shelter by va-z">
   <meta property="og:description" content="An adaptive page made for RSSchool">
-  <link rel="preload" href="./../../assets/fonts/Georgia.ttf" type="font/ttf" as="font" crossorigin="anonymous">
+  <link rel="preload" href="./assets/fonts/Georgia.ttf" type="font/ttf" as="font" crossorigin="anonymous">
   <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
   <link rel="stylesheet" href="./main.css">
   <title>Shelter by va-z</title>
@@ -34,7 +34,7 @@
               <a class="link__header link__header--active link__header--about">About the shelter</a>
             </li>
             <li class="page-header__nav-item">
-              <a href="./../pets/pets.html" class="link__header">Our pets</a>
+              <a href="./pages/pets/pets.html" class="link__header">Our pets</a>
             </li>
             <li class="page-header__nav-item">
               <a class="link__header link__header--inactive">Help the shelter</a>
@@ -57,25 +57,25 @@
           <p class="jumbotron__text text text--white">
             We offer to give a chance to a little and nice puppy with an extremely wide and open heart. He or she will love you more than anybody else in the world, you will see!
           </p>
-          <a href="./../pets/pets.html" class="jumbotron__button button">Make a friend</a>
+          <a href="./pages/pets/pets.htmlpets.html" class="jumbotron__button button">Make a friend</a>
         </div>
         <picture class="jumbotron__picture">
-          <source srcset="./../../assets/start-screen-puppy-desktop.webp" type="image/webp" media="(min-width: 1280px)">
-          <source srcset="./../../assets/start-screen-puppy-tablet.webp" type="image/webp" media="(min-width: 768px)">
-          <source srcset="./../../assets/start-screen-puppy-mobile.webp" type="image/webp">
-          <source srcset="./../../assets/start-screen-puppy-desktop.png" type="image/png" media="(min-width: 1280px)">
-          <source srcset="./../../assets/start-screen-puppy-tablet.png" type="image/png" media="(min-width: 768px)">
-          <img class="jumbotron__image" src="./../../assets/start-screen-puppy-mobile.png" width="260" alt="A cute puppy">
+          <source srcset="./assets/start-screen-puppy-desktop.webp" type="image/webp" media="(min-width: 1280px)">
+          <source srcset="./assets/start-screen-puppy-tablet.webp" type="image/webp" media="(min-width: 768px)">
+          <source srcset="./assets/start-screen-puppy-mobile.webp" type="image/webp">
+          <source srcset="./assets/start-screen-puppy-desktop.png" type="image/png" media="(min-width: 1280px)">
+          <source srcset="./assets/start-screen-puppy-tablet.png" type="image/png" media="(min-width: 768px)">
+          <img class="jumbotron__image" src="./assets/start-screen-puppy-mobile.png" width="260" alt="A cute puppy">
         </picture>
       </div>
     </section>
     <section class="about">
       <div class="about__wrapper content-wrapper">
         <picture class="about__picture">
-          <source srcset="./../../assets/about-pets-desktop.webp" type="image/webp" media="(min-width: 768px)">
-          <source srcset="./../../assets/about-pets-mobile.webp" type="image/webp">
-          <source srcset="./../../assets/about-pets-desktop.png" type="image/png" media="(min-width: 768px)">
-          <img class="about__image" src="./../../assets/about-pets-mobile.png" width="260" alt="Dog and cat">
+          <source srcset="./assets/about-pets-desktop.webp" type="image/webp" media="(min-width: 768px)">
+          <source srcset="./assets/about-pets-mobile.webp" type="image/webp">
+          <source srcset="./assets/about-pets-desktop.png" type="image/png" media="(min-width: 768px)">
+          <img class="about__image" src="./assets/about-pets-mobile.png" width="260" alt="Dog and cat">
         </picture>
         <div class="about__text-wrapper">
           <h3 class="about__heading heading heading--h3">
@@ -106,8 +106,8 @@
             <ul class="slideshow__list">
               <li class="slideshow__card card" data-name="Katrine" data-type="Cat">
                 <picture>
-                  <source srcset="./../../assets/pets-katrine.webp" type="image/webp">
-                  <img class="card__image" src="./../../assets/pets-katrine.jpg" width="270" alt="Katrine the cat">
+                  <source srcset="./assets/pets-katrine.webp" type="image/webp">
+                  <img class="card__image" src="./assets/pets-katrine.jpg" width="270" alt="Katrine the cat">
                 </picture>
                 <p class="card__heading heading heading--card">
                   Katrine
@@ -116,8 +116,8 @@
               </li>
               <li class="slideshow__card card" data-name="Jennifer" data-type="Dog">
                 <picture>
-                  <source srcset="./../../assets/pets-jennifer.webp" type="image/webp">
-                  <img class="card__image" src="./../../assets/pets-jennifer.jpg" width="270" alt="Jennifer the dog">
+                  <source srcset="./assets/pets-jennifer.webp" type="image/webp">
+                  <img class="card__image" src="./assets/pets-jennifer.jpg" width="270" alt="Jennifer the dog">
                 </picture>
                 <p class="card__heading heading heading--card">
                   Jennifer
@@ -126,8 +126,8 @@
               </li>
               <li class="slideshow__card card" data-name="Woody" data-type="Dog">
                 <picture>
-                  <source srcset="./../../assets/pets-woody.webp" type="image/webp">
-                  <img class="card__image" src="./../../assets/pets-woody.jpg" width="270" alt="Woody the dog">
+                  <source srcset="./assets/pets-woody.webp" type="image/webp">
+                  <img class="card__image" src="./assets/pets-woody.jpg" width="270" alt="Woody the dog">
                 </picture>
                 <p class="card__heading heading heading--card">
                   Woody
@@ -143,7 +143,7 @@
             <span class="visually-hidden">Next</span>
           </button>
         </div>
-        <a href="./../pets/pets.html" class="pets__button button">Get to know the rest</a>
+        <a href="./pages/pets/pets.htmlpets.html" class="pets__button button">Get to know the rest</a>
       </div>
     </section>
     <section class="help">
@@ -154,55 +154,55 @@
         <ul class="help__list">
           <li class="help__need">
             <svg class="help__need-image" width="60" height="60">
-              <use href="./../../assets/icons/help.svg#pet-food"></use>
+              <use href="./assets/icons/help.svg#pet-food"></use>
             </svg>
             <h4 class="help__need-heading heading heading--h4 heading--need">Pet food</h4>
           </li>
           <li class="help__need">
             <svg class="help__need-image" width="60" height="60">
-              <use href="./../../assets/icons/help.svg#transportation"></use>
+              <use href="./assets/icons/help.svg#transportation"></use>
             </svg>
             <h4 class="help__need-heading heading heading--h4 heading--need">Transportation</h4>
           </li>
           <li class="help__need">
             <svg class="help__need-image" width="60" height="60">
-              <use href="./../../assets/icons/help.svg#toys"></use>
+              <use href="./assets/icons/help.svg#toys"></use>
             </svg>
             <h4 class="help__need-heading heading heading--h4 heading--need">Toys</h4>
           </li>
           <li class="help__need">
             <svg class="help__need-image" width="60" height="60">
-              <use href="./../../assets/icons/help.svg#bowl"></use>
+              <use href="./assets/icons/help.svg#bowl"></use>
             </svg>
             <h4 class="help__need-heading heading heading--h4 heading--need">Bowls and cups</h4>
           </li>
           <li class="help__need">
             <svg class="help__need-image" width="60" height="60">
-              <use href="./../../assets/icons/help.svg#shampoo"></use>
+              <use href="./assets/icons/help.svg#shampoo"></use>
             </svg>
             <h4 class="help__need-heading heading heading--h4 heading--need">Shampoos</h4>
           </li>
           <li class="help__need">
             <svg class="help__need-image" width="60" height="60">
-              <use href="./../../assets/icons/help.svg#vitamins"></use>
+              <use href="./assets/icons/help.svg#vitamins"></use>
             </svg>
             <h4 class="help__need-heading heading heading--h4 heading--need">Vitamins</h4>
           </li>
           <li class="help__need">
             <svg class="help__need-image" width="60" height="60">
-              <use href="./../../assets/icons/help.svg#medicines"></use>
+              <use href="./assets/icons/help.svg#medicines"></use>
             </svg>
             <h4 class="help__need-heading heading heading--h4 heading--need">Medicines</h4>
           </li>
           <li class="help__need">
             <svg class="help__need-image" width="60" height="60">
-              <use href="./../../assets/icons/help.svg#collars"></use>
+              <use href="./assets/icons/help.svg#collars"></use>
             </svg>
             <h4 class="help__need-heading heading heading--h4 heading--need">Collars / leashes</h4>
           </li>
           <li class="help__need">
             <svg class="help__need-image" width="60" height="60">
-              <use href="./../../assets/icons/help.svg#sleeping-area"></use>
+              <use href="./assets/icons/help.svg#sleeping-area"></use>
             </svg>
             <h4 class="help__need-heading heading heading--h4 heading--need">Sleeping areas</h4>
           </li>
@@ -212,10 +212,10 @@
     <section class="donation">
       <div class="donation__wrapper content-wrapper">
         <picture class="donation__picture">
-          <source srcset="./../../assets/donation-dog-desktop.webp" type="image/webp" media="(min-width: 768px)">
-          <source srcset="./../../assets/donation-dog-mobile.webp" type="image/webp">
-          <source srcset="./../../assets/donation-dog-desktop.png" type="image/png" media="(min-width: 768px)">
-          <img class="donation__image" src="./../../assets/donation-dog-mobile.png" width="260" alt="Donate">
+          <source srcset="./assets/donation-dog-desktop.webp" type="image/webp" media="(min-width: 768px)">
+          <source srcset="./assets/donation-dog-mobile.webp" type="image/webp">
+          <source srcset="./assets/donation-dog-desktop.png" type="image/png" media="(min-width: 768px)">
+          <img class="donation__image" src="./assets/donation-dog-mobile.png" width="260" alt="Donate">
         </picture>
         <div class="donation__text-wrapper">
           <h3 class="donation__heading heading heading--h3">
@@ -224,7 +224,7 @@
           <h5 class="donation__subheading heading heading--h5">Name of the bank / Type of bank account</h5>
           <a class="donation__button button" href="#" target="_blank">
             <svg class="donation__button-icon" width="30" height="22" aria-roledescription="presentation">
-              <use href="./../../assets/icons/misc.svg#credit-card"></use>
+              <use href="./assets/icons/misc.svg#credit-card"></use>
             </svg>
             <span class="donation__button-text heading heading--h4">8380 2880 8028 8791 7435</span>
           </a>
@@ -241,13 +241,13 @@
         <h3 class="page-footer__heading heading heading--footer heading--white">For questions and suggestions</h3>
         <a class="page-footer__link link__footer" href="mailto:email@shelter.com">
           <svg class="page-footer__link-icon page-footer__link-icon--email" width="40" aria-roledescription="presentation">
-            <use href="./../../assets/icons/misc.svg#mail"></use>
+            <use href="./assets/icons/misc.svg#mail"></use>
           </svg>
           <span itemprop="email">email@shelter.com</span>
         </a>
         <a class="page-footer__link link__footer" href="tel:+136745677554">
           <svg class="page-footer__link-icon page-footer__link-icon--phone" width="40" aria-roledescription="presentation">
-            <use href="./../../assets/icons/misc.svg#telephone"></use>
+            <use href="./assets/icons/misc.svg#telephone"></use>
           </svg>
           <span itemprop="telephone">+13 674 567 75 54</span>
         </a>
@@ -256,23 +256,23 @@
         <h3 class="page-footer__heading heading heading--footer heading--white">We are waiting for your visit</h3>
         <a class="page-footer__link link__footer" href="https://goo.gl/maps/Sg5BY1R6J55umJqx9" target="_blank">
           <svg class="page-footer__link-icon page-footer__link-icon--pin" width="22" height="32" aria-roledescription="presentation">
-            <use href="./../../assets/icons/misc.svg#pin"></use>
+            <use href="./assets/icons/misc.svg#pin"></use>
           </svg>
           <span itemprop="address">1 Central Street, Boston (entrance from the store)</span>
         </a>
         <a class="page-footer__link link__footer" href="https://goo.gl/maps/zoDVpMs6hTanF3A67" target="_blank">
           <svg class="page-footer__link-icon page-footer__link-icon--pin" width="22" height="32" aria-roledescription="presentation">
-            <use href="./../../assets/icons/misc.svg#pin"></use>
+            <use href="./assets/icons/misc.svg#pin"></use>
           </svg>
           <span itemprop="address">18 South Park, London</span>
         </a>
       </div>
     </div>
   </footer>
-  <script src="./../js/helpers.js" defer></script>
-  <script src="./../js/no-js.js" defer></script>
-  <script src="./../js/burger-menu.js" defer></script>
-  <script src="./../js/modal.js" defer></script>
+  <script src="./pages/js/helpers.js" defer></script>
+  <script src="./pages/js/no-js.js" defer></script>
+  <script src="./pages/js/burger-menu.js" defer></script>
+  <script src="./pages/js/modal.js" defer></script>
   <script src="./main.js" defer></script>
 </body>
 
