--- a/pages/pets/pets.html
+++ b/pages/pets/pets.html
@@ -31,7 +31,7 @@
         <nav class="page-header__nav">
           <ul class="page-header__nav-list">
             <li class="page-header__nav-item">
-              <a href="./../main/index.html" class="link__header link__header--about link__header--pets">About the shelter</a>
+              <a href="../../index.html" class="link__header link__header--about link__header--pets">About the shelter</a>
             </li>
             <li class="page-header__nav-item">
               <a class="link__header link__header--pets link__header--active">Our pets</a>
